--- a/ts/2.webpack/package.json
+++ b/ts/2.webpack/package.json
@@ -14,6 +14,7 @@
     "path": "^0.12.7",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^5.3.0",
+    "typescript": "^3.1.6",
     "webpack": "^4.25.1",
     "webpack-dev-server": "^3.1.10"
   },
