--- a/ts/2.webpack/package.json
+++ b/ts/2.webpack/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cropper": "1.0.0",
     "path": "^0.12.7",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^5.3.0",
     "typescript": "^3.1.6",
+    "vue-cropper": "^0.4.6",
     "webpack": "^4.25.1",
     "webpack-dev-server": "^3.1.10"
   },
